--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "code-loom-client",
+  "name": "codeloom-client",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,33 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
-    "socket.io-client": "^4.7.4",
+    "react-router-dom": "^6.8.1",
+    "socket.io-client": "^4.7.2",
     "yjs": "^13.6.8",
-    "y-socket.io": "^1.0.2",
-    "y-monaco": "^0.1.4",
+    "y-websocket": "^1.5.0",
+    "y-monaco": "^0.1.8",
+    "@monaco-editor/react": "^4.6.0",
     "axios": "^1.6.2",
-    "react-google-button": "^0.7.2",
+    "react-hot-toast": "^2.4.1",
     "lucide-react": "^0.294.0",
-    "@headlessui/react": "^1.7.17",
-    "react-hot-toast": "^2.4.1"
+    "firebase": "^10.7.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.1.1",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.53.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "vite": "^5.0.8"
   }
 }
