--- a/server/env.example
+++ b/server/env.example
@@ -1,21 +1,14 @@
-# Database
-MONGODB_URI=mongodb://localhost:27017/codeloom
+# MongoDB Connection
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/codeloom?retryWrites=true&w=majority
 
-# Google OAuth
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+# Firebase Admin Configuration
+FIREBASE_PROJECT_ID=your_firebase_project_id
+FIREBASE_SERVICE_ACCOUNT_KEY={"type":"service_account","project_id":"your_project","private_key_id":"...","private_key":"...","client_email":"...","client_id":"...","auth_uri":"...","token_uri":"...","auth_provider_x509_cert_url":"...","client_x509_cert_url":"..."}
 
-# JWT
-JWT_SECRET=your_jwt_secret_key_here
-
-# Session
-SESSION_SECRET=your_session_secret_here
-
-# Frontend URL
-CLIENT_URL=http://localhost:3000
-
-# Port
+# Server Configuration
 PORT=5000
+CLIENT_URL=http://localhost:5173
+SERVER_URL=http://localhost:5000
 
-# Node Environment
-NODE_ENV=development
+# JWT Secret (for any additional JWT needs)
+JWT_SECRET=your_random_jwt_secret_here
