--- a/server/package.json
+++ b/server/package.json
@@ -1,41 +1,44 @@
 {
-  "name": "code-loom-server",
+  "name": "codeloom-server",
   "version": "1.0.0",
-  "description": "Backend server for CodeLoom collaborative editor",
+  "description": "CodeLoom backend server",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.4",
-    "mongoose": "^8.0.3",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "express-session": "^1.17.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "firebase": "^12.1.0",
+    "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
-    "yjs": "^13.6.8",
-    "y-socket.io": "^1.0.2",
-    "simple-peer": "^9.11.1",
-    "uuid": "^9.0.1"
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.0.3",
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.7.2",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.6.8"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/express-session": "^1.17.10",
-    "@types/passport": "^1.0.16",
-    "@types/passport-google-oauth20": "^2.0.14",
-    "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/uuid": "^9.0.7",
-    "@types/node": "^20.10.0",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.3.2"
-  }
+    "@types/node": "^20.10.4",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3"
+  },
+  "keywords": [
+    "collaboration",
+    "ide",
+    "realtime",
+    "code-editor"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
